# MindClaw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  clawhub.yaml  pyproject.toml
mindclaw/: pyproject.toml
mindclaw/src/mindclaw/: __init__.py  search.py
src/mindclaw/: __init__.py  cli.py  mcp_server.py  store.py
